--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 fpdf==1.7.2
 fpdf2==2.8.3
 langchain==0.3.25
-langchain_community==0.3.25
-langchain_core==0.3.65
-langchain_groq==0.3.2
-langchain_huggingface==0.3.0
+transformers==4.41.0
+torch==2.1.0
+langchain-community==0.3.25
+langchain-core==0.3.65
+langchain-groq==0.3.2
+langchain-huggingface==0.3.0
 langgraph==0.4.8
 python-dotenv==1.1.0
-Requests==2.32.4
+requests==2.32.4
 streamlit==1.41.1
-typing_extensions==4.14.0
-sentence_transformers
+typing-extensions==4.14.0
+sentence-transformers==2.6.1
