--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fpdf==1.7.2
 fpdf2==2.8.3
 arxiv==2.1.3
 pypdf==5.2.0
 langchain==0.3.17
+huggingface-hub==0.32.3
 transformers==4.46.3
 langchain-community==0.3.16
 langchain-core==0.3.63
